--- a/css/layout-base.css
+++ b/css/layout-base.css
@@ -1,23 +1,46 @@
-html {
-  height: 100%;
+* {
+  box-sizing: border-box;
 }
 
-body {
-  height: 100%; 
+html, body {
   margin: 0;
   padding: 0;
-  font-family: 'Georgia', serif;
-  background-color: #ffffff;
+  height: 90%;
+  /* overflow: hidden;*/
+}
+
+/* html { */
+/*   height: 100%; */
+/* } */
+
+/* body { */
+/*   /\* height: 100%;  *\/ */
+/*   margin: 0; */
+/*   padding: 0; */
+/*   font-family: 'Georgia', serif; */
+/*   background-color: #ffffff; */
   
+/*   background-image: url('../img/wappen_30.png'); */
+/*   background-position: center 200px; */
+/*   background-repeat: no-repeat; */
+/*   background-attachment: fixed; */
+
+/*   display: flex; */
+/*   flex-direction: column; */
+/*   min-height: 100vh; */
+/*   margin: 0;     */
+/* } */
+body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
   background-image: url('../img/wappen_30.png');
   background-position: center 200px;
   background-repeat: no-repeat;
   background-attachment: fixed;
 
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  margin: 0;    
 }
 
 .main-container {
@@ -32,8 +55,8 @@ body {
 }
 
 .content-wrapper {
-  margin-top: 100px;
-  padding-left: 80px;
+  /* margin-top: 100px; */
+  padding: 100px 0 40px 80px;
   flex: 1;              
   display: flex;
   flex-direction: column;  
